deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spoonacular-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spoonacular-app
  template:
    metadata:
      labels:
        app: spoonacular-app
    spec:
      serviceAccountName: spoonacular-sa
      containers:
        - name: spoonacular-app
          image: 270770993091.dkr.ecr.us-east-1.amazonaws.com/spoonacular-app:v1.0.0
          ports:
            - containerPort: 8080

          volumeMounts:
            - name: secrets-store
              mountPath: /mnt/secrets
              readOnly: true
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: spoonacular-postgres
